fix: removed dual scrollbar on attributes tab of character sheets

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -128,9 +128,9 @@
             flex: 1 0 auto
         
           .center-pane
-            overflow-x: hidden
-            overflow-y: auto
+            overflow: hidden
             flex: 1 1 auto
+            height: auto
         
         .tab.inventory
           .inventory-filters .currency
